# c_programming2

./: README.md
lab1/: clock134.c  run.sh  task1.c  test134  test134.c
lab2/: task1  task1.c
lab3/: file.txt  lab3git.docx  lab3giton4.docx  lab3giton5.docx  lefty.py  mergesort.py  righty.py  sort.c
lab4/: o.txt  output.txt  taskon5  taskon5.c
lab5/: taskon5  taskon5.c
lab6/: CMakeLists.txt  main.c  program_dynamic  student.h
lab6/src/: sorts.c  student_utils.c
lab7/: 123  lab7.md  program  taskon3  taskon3.c  taskon4  taskon4.c  taskon4.с
lab8/: linked_list.c  linked_list.h  linked_list_program  linked_list_tests  main.c  program  test_linked_test.c
translate/: CMakeLists.txt
translate/include/: dictionary.h  translator.h
translate/src/: CMakeLists.txt  dictionary.c  main.c  translator.c
